--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -30,6 +30,7 @@ $breakpoints: (
         top: 0;
         z-index: 0;
         pointer-events: none;
+        max-width: none;
     }
     &#scroll_snap_container {
         height: 100vh;
@@ -39,16 +40,21 @@ $breakpoints: (
         background-color: #f7f7f7;
         color: black;
         transition: all 1s ease;
-    
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
         &.bg-dark {
             background-color: #131313;
             color: white;
         }
-    
+
         section {
             position: relative;
             height: 100vh;
-            width: 100vw;
+            width: 100%;
             overflow: hidden;
             display: flex;
             align-items: center;
@@ -67,7 +73,7 @@ $breakpoints: (
                 background: none !important;
             }
     
-            > div {
+            > div:not(.bg-gradient) {
                 z-index: 1;
                 max-width: 1280px;
             }
@@ -117,12 +123,12 @@ $breakpoints: (
         @media screen and (max-width: 340px) {
             flex-wrap: nowrap;
             overflow-x: scroll;
-            width: 100vw;
+            width: 100%;
         }
         @media (orientation: landscape) and (max-width: 576px) {
             flex-wrap: nowrap;
             overflow-x: scroll;
-            width: 100vw;
+            width: 100%;
         }
     }
     
