--- a/src/pages/Portfolio/WebPortfolio/WebPortfolio.scss
+++ b/src/pages/Portfolio/WebPortfolio/WebPortfolio.scss
@@ -23,6 +23,7 @@ $breakpoints: (
         height: 110vh;
         top: 0;
         z-index: 0 !important;
+        max-width: none;
     }
     &#scroll_snap_container {
         height: 100vh;
@@ -30,16 +31,21 @@ $breakpoints: (
         overflow-y: scroll;
         scroll-snap-type: y mandatory;
         transition: all 1s ease;
-    
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
         &.bg-dark {
             background-color: #131313;
             color: white;
         }
-    
+
         section {
             position: relative;
             height: 100vh;
-            width: 100vw;
+            width: 100%;
             overflow: hidden;
             display: flex;
             align-items: center;
@@ -56,7 +62,7 @@ $breakpoints: (
                 color: white;
             }
 
-            > div {
+            > div:not(.bg-gradient) {
                 z-index: 1;
                 max-width: 1280px;
             }
@@ -174,13 +180,13 @@ $breakpoints: (
         @media screen and (max-width: 340px) {
             grid-template-columns: repeat(3, 1fr);
             overflow-x: auto;
-            width: 100vw;
+            width: 100%;
         }
 
         @media (orientation: landscape) and (max-width: breakpoint(sm)) {
             grid-template-columns: repeat(6, 1fr);
             overflow-x: auto;
-            width: 100vw;
+            width: 100%;
         }
     }
 }
